--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,13 @@
-- task: SonarQubePrepare@5
-  inputs:
-    SonarQube: 'devops'
-    scannerMode: 'MSBuild'
-    projectKey: 'sqa_2cc9eec94fec692108d4021bae1e7de31da76980'
-    projectName: 'CI_CD_PIPELINE_01'
-- task: SonarQubePublish@5
-  inputs:
-    pollingTimeoutSec: '300'
-- task: SonarQubeAnalyze@5
-  inputs:
-    jdkversion: 'JAVA_HOME'
+trigger:none
+pr:
+  branches:
+  include:
+    {*}
+stages:
+stages:
+- stage: CheckoutT3
+  displayName: 'Checkout t3 Branch'
+  jobs:
+  - job: CheckoutT3Job
+    displayName: 'Checkout t3 Job'
+    pool:
